adding html version

--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -579,7 +579,7 @@
    "id": "4053bc36-ddda-4e86-9891-9e1cff11ee8e",
    "metadata": {},
    "source": [
-    "Because the distributions are discrete, so are the probabilities and 'sigmas'. \n",
+    "#### Because the distributions are discrete, so are the probabilities and 'sigmas'？\n",
     "\n",
     "The probabilities are the under areas of the curve or the integral of the curve, and there are a lot of 'make up' areas in poisson distribution. Therefore, the probabilities and sigmas are not accurate, and they would be greater than it actually is."
    ]
@@ -589,7 +589,7 @@
    "id": "274b9f2a-1c85-4cd3-99e5-5dc5a71bc6eb",
    "metadata": {},
    "source": [
-    "E. While the results are discrete, the parameters of the distributions are not. For example, the mean of a Poisson distribution can be 9.2. Think about and explain why this makes sense and what changes continuously and what doesn't.\n",
+    "#### E. While the results are discrete, the parameters of the distributions are not. For example, the mean of a Poisson distribution can be 9.2. Think about and explain why this makes sense and what changes continuously and what doesn't.\n",
     "\n",
     "It is true that it is impossible to get a float type score as a result for some case, such as soccer game. However, those made up parameters could be float type, where made up means the parameters are calculated from real data, because those parameters are used to help our better analysis the result, like standard deviation and mean."
    ]
